--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -23,8 +23,8 @@
         android:label="fragment_playback"
         tools:layout="@layout/fragment_playback" >
         <argument
-            android:name="song"
-            app:argType="com.jadebyte.jadeplayer.main.songs.Song" />
+            android:name="mediaItem"
+            app:argType="com.jadebyte.jadeplayer.main.playback.MediaItemData" />
         <argument
             android:name="transitionName"
             app:argType="string" />
@@ -38,7 +38,7 @@
         android:label="fragment_songs_menu_bottom_sheet_dialog"
         tools:layout="@layout/fragment_songs_menu_bottom_sheet_dialog" >
         <argument
-            android:name="song"
-            app:argType="com.jadebyte.jadeplayer.main.songs.Song" />
+            android:name="mediaItem"
+            app:argType="com.jadebyte.jadeplayer.main.playback.MediaItemData" />
     </dialog>
 </navigation>
