--- a/app/src/main/res/drawable/ic_play_white.xml
+++ b/app/src/main/res/drawable/ic_play_white.xml
@@ -3,14 +3,14 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="11dp"
-    android:height="13dp"
+    android:width="12dp"
+    android:height="14.5dp"
     android:viewportWidth="10.972"
     android:viewportHeight="13.411">
     <path
         android:pathData="M1.219,1.219 L9.753,6.705 1.219,12.191L1.219,1.219Z"
         android:strokeWidth="2"
-        android:strokeColor="#fff"
+        android:strokeColor="?android:textColorTertiary"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
 </vector>
