--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="progress_circle_thickness">3dp</dimen>
+    <dimen name="progress_circle_thickness_thin">1.5dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="margin_x_small">2dp</dimen>
     <dimen name="margin_small">5dp</dimen>
