--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -2,60 +2,87 @@
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".main.explore.ExploreFragment">
 
-    <TextView
-        android:id="@+id/sectionTitle"
-        style="@style/AppTheme.SectionTitle"
-        android:text="@string/explore"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/navigationIcon"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageButton
-        android:id="@+id/navigationIcon"
-        style="@style/AppTheme.SectionIcon"
-        android:contentDescription="@string/navigation_icon"
-        app:layout_constraintBottom_toBottomOf="@id/sectionTitle"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintLeft_toRightOf="@+id/sectionTitle"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/sectionTitle"
-        app:srcCompat="@drawable/ic_nav" />
+        <TextView
+            android:id="@+id/sectionTitle"
+            style="@style/AppTheme.SectionTitle"
+            android:text="@string/explore"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/navigationIcon"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/randomAlbumsRV"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sectionTitle" />
+        <ImageButton
+            android:id="@+id/navigationIcon"
+            style="@style/AppTheme.SectionIcon"
+            android:contentDescription="@string/navigation_icon"
+            app:layout_constraintBottom_toBottomOf="@id/sectionTitle"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintLeft_toRightOf="@+id/sectionTitle"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/sectionTitle"
+            app:srcCompat="@drawable/ic_nav" />
 
-    <TextView
-        android:id="@+id/recentlyPlayed"
-        style="@style/AppTheme.SectionTitle"
-        android:text="@string/recentlyPlayed"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/randomAlbumsRV" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/randomAlbumsRV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sectionTitle" />
+
+        <TextView
+            android:id="@+id/recentlyPlayed"
+            style="@style/AppTheme.SectionTitle"
+            android:text="@string/recentlyPlayed"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/randomAlbumsRV" />
 
 
-    <TextView
-        android:id="@+id/emptyPlaylist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/padding_xx_large"
-        android:text="@string/empty_playlist"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recentlyPlayed" />
+        <TextView
+            android:id="@+id/emptyPlaylist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_xx_large"
+            android:text="@string/empty_playlist"
+            android:textAlignment="center"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recentlyPlayed" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            android:indeterminateDrawable="@drawable/progress"
+            app:layout_constraintBottom_toBottomOf="@+id/emptyPlaylist"
+            app:layout_constraintEnd_toEndOf="@+id/emptyPlaylist"
+            app:layout_constraintStart_toStartOf="@+id/emptyPlaylist"
+            app:layout_constraintTop_toTopOf="@+id/emptyPlaylist" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/playedRV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recentlyPlayed" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
