--- a/app/src/main/res/layout/fragment_bottom_playback.xml
+++ b/app/src/main/res/layout/fragment_bottom_playback.xml
@@ -110,9 +110,9 @@
             android:layout_marginEnd="@dimen/margin_medium"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/play_and_pause_button"
-            android:onClick="@{(v) -> viewModel.playMediaId(viewModel.currentItem.id)}"
+            android:onClick="@{(v) -> viewModel.playCurrent()}"
             android:padding="@dimen/padding_large"
-            android:src="@{viewModel.currentItem.playing? @drawable/ic_pause_white :@drawable/ic_play_white }"
+            android:src="@{viewModel.currentItem.playing? @drawable/ic_pause_tertiary :@drawable/ic_play_tertiary }"
             app:layout_constraintEnd_toStartOf="@+id/nextButton"
             app:layout_constraintStart_toEndOf="@+id/previousButton"
             app:layout_constraintTop_toTopOf="@+id/nextButton"
