--- a/app/src/main/res/drawable/ic_pause_tertiary.xml
+++ b/app/src/main/res/drawable/ic_pause_tertiary.xml
@@ -8,9 +8,9 @@
     android:viewportWidth="10.972"
     android:viewportHeight="16">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="?android:textColorTertiary"
         android:pathData="M10.999,14.745a1.255,1.255 0,1 1,-2.51 0v-13.49a1.255,1.255 0,1 1,2.51 0Z" />
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="?android:textColorTertiary"
         android:pathData="M2.509,14.745a1.254,1.254 0,1 1,-2.509 0v-13.49a1.254,1.254 0,1 1,2.509 0Z" />
 </vector>
