Added playback indicators to some items

--- a/app/src/main/res/layout/fragment_current_songs.xml
+++ b/app/src/main/res/layout/fragment_current_songs.xml
@@ -10,4 +10,6 @@
     android:background="@color/colorBackground"
     android:requiresFadingEdge="vertical"
     android:fadingEdgeLength="50dp"
+    android:scrollbars="vertical"
+    android:fadeScrollbars="false"
     tools:context=".main.playback.CurrentSongsFragment" />
