--- a/app/src/main/res/layout/item_current.xml
+++ b/app/src/main/res/layout/item_current.xml
@@ -8,15 +8,17 @@
 
     <data>
 
+
+        <import type="android.view.View" />
+
         <import type="android.text.format.DateUtils" />
 
         <import type="java.util.concurrent.TimeUnit" />
 
-        <import type="com.jadebyte.jadeplayer.R" />
-
         <variable
-            name="song"
-            type="com.jadebyte.jadeplayer.main.songs.Song" />
+            name="mediaItem"
+            type="com.jadebyte.jadeplayer.main.playback.MediaItemData" />
+
 
     </data>
 
@@ -25,25 +27,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:paddingStart="@dimen/padding_x_large"
+        android:paddingLeft="@dimen/padding_large"
         android:paddingTop="@dimen/padding_medium"
-        android:paddingEnd="@dimen/padding_x_large"
+        android:paddingRight="@dimen/padding_large"
         android:paddingBottom="@dimen/padding_medium">
+
 
         <TextView
             android:id="@+id/songTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginEnd="@dimen/margin_small"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{song.title}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@{song.current? R.color.colorAccent : R.color.textColorPrimary}"
-            app:layout_constraintBottom_toTopOf="@+id/songArtist"
+            android:text="@{mediaItem.title}"
+            android:textColor="@{mediaItem.playing? @color/colorAccent :@color/textColorPrimary}"
+            android:textSize="@dimen/text_size_small"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toTopOf="@+id/guideLine"
             app:layout_constraintEnd_toStartOf="@+id/songDuration"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Midnight Dogs" />
+            app:layout_constraintVertical_bias="19"
+            tools:text="Loved it out there"
+            tools:textColor="@color/colorAccent" />
 
         <TextView
             android:id="@+id/songArtist"
@@ -51,27 +59,37 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{song.album.artist}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@{song.current? R.color.colorAccent : R.color.textColorSecondary}"
+            android:text="@{mediaItem.subtitle}"
+            android:textColor="@{mediaItem.playing? @color/colorAccent :@color/textColorSecondary}"
+            android:textSize="@dimen/text_size_x_small"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/songTitle"
-            app:layout_constraintRight_toRightOf="@+id/songTitle"
-            app:layout_constraintTop_toBottomOf="@+id/songTitle"
-            tools:text="Beyoncee" />
-
+            app:layout_constraintEnd_toEndOf="@+id/songTitle"
+            app:layout_constraintStart_toStartOf="@+id/songTitle"
+            app:layout_constraintTop_toBottomOf="@+id/guideLine"
+            app:layout_constraintVertical_bias="0"
+            tools:text="Midnight Dogs"
+            tools:textColor="@color/textColorSecondary" />
 
         <TextView
             android:id="@+id/songDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_medium"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{DateUtils.formatElapsedTime(TimeUnit.MILLISECONDS.toSeconds(song.duration))}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:text="@{DateUtils.formatElapsedTime(TimeUnit.MILLISECONDS.toSeconds(mediaItem.duration))}"
+            android:textColor="@color/textColorSecondary"
+            android:textSize="@dimen/text_size_x_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="04:57 " />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
