Implemented search functionality

--- a/app/src/main/res/layout/fragment_base_player.xml
+++ b/app/src/main/res/layout/fragment_base_player.xml
@@ -11,12 +11,12 @@
 
     <TextView
         android:id="@+id/sectionTitle"
-        tools:text="@string/songs"
         style="@style/AppTheme.SectionTitle"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/navigationIcon"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/songs" />
 
     <ImageButton
         android:id="@+id/navigationIcon"
@@ -34,9 +34,9 @@
         android:id="@+id/dataNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
         android:paddingLeft="@dimen/margin_large"
         android:paddingRight="@dimen/margin_large"
-        android:layout_marginTop="@dimen/margin_medium"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -46,36 +46,38 @@
 
     <Button
         android:id="@+id/playButton"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/play"
-        android:drawablePadding="@dimen/padding_large"
-        android:paddingLeft="@dimen/padding_xx_large"
-        android:paddingRight="@dimen/padding_xx_large"
-        android:minHeight="0dp"
-        android:paddingTop="@dimen/padding_small"
-        android:paddingBottom="@dimen/padding_small"
-        android:layout_marginRight="@dimen/margin_medium"
         android:layout_marginLeft="@dimen/margin_medium"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:textSize="@dimen/text_size_x_small"
+        android:layout_marginRight="@dimen/margin_medium"
         android:background="@drawable/accent_round_corner"
-        android:textColor="@android:color/white"
         android:drawableStart="@drawable/ic_play_white"
+        android:drawablePadding="@dimen/padding_large"
+        android:minHeight="0dp"
+        android:paddingLeft="@dimen/padding_xx_large"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingRight="@dimen/padding_xx_large"
+        android:paddingBottom="@dimen/padding_small"
+        android:text="@string/play"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/text_size_x_small"
         app:layout_constraintBottom_toBottomOf="@+id/dataNum"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/dataNum"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/dataNum" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dataRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:fadeScrollbars="false"
         android:paddingTop="@dimen/padding_small"
-        android:id="@+id/dataRV"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playButton"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/playButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
