--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rootView"
     tools:context=".main.search.SearchFragment">
 
     <ImageButton
@@ -69,8 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/sectionBackButton"
         app:tabBackground="@color/colorPrimary"
         app:tabGravity="center"
-        app:tabIndicatorHeight="4dp"
-        app:tabMode="fixed" />
+        app:tabMode="scrollable" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/resultsPager"
