--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_navigation_graph.xml"
+    android:label="BottomNavFragment"
     app:startDestination="@id/exploreFragment">
 
     <fragment
@@ -99,7 +100,45 @@
         android:id="@+id/searchFragment"
         android:name="com.jadebyte.jadeplayer.main.search.SearchFragment"
         android:label="SearchFragment"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_songsMenuBottomSheetDialogFragment"
+            app:destination="@id/songsMenuBottomSheetDialogFragment" >
+            <argument
+                android:name="popUpTo"
+                android:defaultValue="@id/searchFragment" />
+        </action>
+        <action
+            android:id="@+id/action_searchFragment_to_albumsMenuBottomSheetDialogFragment"
+            app:destination="@id/albumsMenuBottomSheetDialogFragment" >
+            <argument android:defaultValue="@id/searchFragment"
+                android:name="popUpTo" />
+        </action>
+        <action
+            android:id="@+id/action_searchFragment_to_albumSongsFragment"
+            app:destination="@id/albumSongsFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_artistAlbumsFragment"
+            app:destination="@id/artistAlbumsFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_genreSongsFragment"
+            app:destination="@id/genreSongsFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_genresMenuBottomSheetDialogFragment"
+            app:destination="@id/genresMenuBottomSheetDialogFragment" >
+            <argument android:defaultValue="@id/searchFragment"
+                android:name="popUpTo" />
+        </action>
+        <action
+            android:id="@+id/action_searchFragment_to_playlistSongsFragment"
+            app:destination="@id/playlistSongsFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_playlistMenuBottomSheetDialogFragment"
+            app:destination="@id/playlistMenuBottomSheetDialogFragment" >
+            <argument android:defaultValue="@id/searchFragment"
+                android:name="popUpTo" />
+        </action>
+    </fragment>
 
     <dialog
         android:id="@+id/navigationDialogFragment"
@@ -198,8 +237,8 @@
         android:label="fragment_songs_menu_bottom_sheet_dialog"
         tools:layout="@layout/fragment_songs_menu_bottom_sheet_dialog">
         <argument
-            android:name="song"
-            app:argType="com.jadebyte.jadeplayer.main.songs.Song" />
+            android:name="mediaId"
+            app:argType="long" />
         <action
             android:id="@+id/action_songsMenuBottomSheetDialogFragment_to_addSongsToPlaylistsFragment"
             app:destination="@id/addSongsToPlaylistsFragment"
